include_directories(${mU_HEADER_DIR})
AUX_SOURCE_DIRECTORY(. MUKERNEL_SRCS)
add_library(mukernel SHARED ${MUKERNEL_SRCS})
add_precompiled_header(mukernel ${CMAKE_CURRENT_SOURCE_DIR}/StdAfx.h)
if(WIN32)
  target_link_libraries(mukernel gmp boost_system boost_thread)
elseif(UNIX)
  target_link_libraries(mukernel gmp dl boost_system boost_thread)
else()
    message(FATAL_ERROR "building on an unsupported operating system")
endif()
