include_directories(./)
file(GLOB MATRIX_SRCS "*.cpp")
AUX_SOURCE_DIRECTORY(mU/ MU_MATRIX_SRCS)
add_library(nvmatrix SHARED ${MATRIX_SRCS} ${MU_MATRIX_SRCS})
add_precompiled_header(nvmatrix ${CMAKE_CURRENT_SOURCE_DIR}/StdAfx.h)
target_link_libraries(nvmatrix nvkernel nvnumber mukernel musystem) 
